--- a/package.json
+++ b/package.json
@@ -5,32 +5,25 @@
   "scripts": {
     "dev": "next dev",
     "build": "run-s build:posts build:next",
-    "build:posts": "ts-node --project tsconfig.builder.json ./src/builder/posts.ts",
+    "build:posts": "esno scripts/posts.ts",
     "build:next": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "dayjs": "^1.9.3",
-    "next": "9.5.5",
-    "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "dayjs": "^1.10.7",
+    "next": "12.0.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.2",
-    "@types/node": "^14.11.10",
-    "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "fs-extra": "^9.0.1",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^17.0.1",
+    "@types/react-dom": "^17.0.11",
+    "esno": "^0.13.0",
+    "fs-extra": "^10.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "rss-parser": "^3.9.0",
-    "sass": "^1.27.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "rss-parser": "^3.12.0",
+    "sass": "^1.45.0",
+    "typescript": "^4.5.4"
   }
 }
